# deepiri-emotion-desktop

./: .gitignore  ARCHITECTURE.md  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.node.js
.github/codeql/: README.md
.github/workflows/: codeql.yml
cli/: README.md  index.js  stub-devtools.js
cli/agent/: llmStream.js  runner.js  tools.js
cli/agent/__tests__/: tools.test.node.js
cli/core/: config.js  eventBus.js  stateStore.js
cli/ui/: App.js  App.jsx  MessageList.js  MessageList.jsx  PromptInput.js  PromptInput.jsx  Spinner.js  Spinner.jsx  StatusBar.js  StatusBar.jsx  StepTimeline.js  StepTimeline.jsx
docs/: architecture.md  cli-tui-v2-plan.md  setup.md
scripts/: build-cli.cjs  setup-full.sh
src/: agentRuntime.js  indexing.js  indexing.test.node.js  main.js  preload.js
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  gamification.rs  integrations.rs  local_llm.rs  main.rs  session_recorder.rs
src/main/: bootstrap-args.js  bootstrap-env.js  index.js  menu.js
src/main/services/: agentService.js  aiService.js  dbService.js  extensionsService.js  fileService.js  heloxService.js  integrationService.js  platformService.js  shellService.js  terminalService.js  workspaceService.js
src/renderer/: App.jsx  index.html  main.jsx  mission-system.js  renderer.js
src/renderer/api/: README.md  electronApi.js  index.js
src/renderer/components/: AIAssistant.jsx  Breadcrumbs.jsx  Breadcrumbs.test.jsx  ChallengePanel.jsx  CodeEditor.jsx  CommandPalette.jsx  CyrexEmbed.jsx  (+14 more)
src/shared/: integrationsCatalog.js  ipcChannels.js
(+56 files in other folders)
